# labmate.skill

./: AGENTS.md  README.md  generate_fixtures.py  sample_guide.pptx  verify_fixtures.py  学生信息.md
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-deps.txt  task-1-structure.txt  task-10-parse.json  task-11-progress.json  task-12-git.txt  task-12-init.json  task-14-commit.txt  task-2-schemas.txt  task-3-pdf-text.txt  task-4-placeholders.txt  task-5-pptx.txt  task-6-deps-json.json  task-6-deps-pass.txt  task-7-discover.json  task-7-notfound.txt  task-8-parse.json  (+2 more)
assets/: 学生信息模板.md
lab-report/: SKILL.md  __init__.py  pyproject.toml
lab-report/.sisyphus/evidence/: task-23-tests.txt
lab-report/assets/: create_template.py  report_template.docx
lab-report/references/: de-ai-style-guide.md  guide-mode-workflow.md  schemas.md  template-patterns.md  troubleshooting.md  work-mode-workflow.md
lab-report/scripts/: __init__.py  auto_prepare_template.py  check_deps.py  extract_template.py  fill_template.py  fill_utils.py  git_manager.py  init_project.py  inspect_template.py  parse_docx.py  parse_pdf.py  progress_manager.py  role_aliases.py  section_map.py  validate_docx.py
lab-report/tests/: conftest.py  test_auto_prepare_template.py  test_fill_utils.py  test_integration.py  test_progress_manager.py  test_validate_docx.py
lab-report/tests/fixtures/: README.md  generate_prepare_fixtures.py  generate_sample_guide.py  prepare_hints.docx  prepare_merged.docx  prepare_nonstandard.docx  prepare_standard.docx  test_data.json
scripts/: git_manager.py  parse_pptx.py
(+5 files in other folders)
